--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,6 +13,13 @@
   <link rel="stylesheet" href="../css/estilo.css">
 
   <title>Document</title>
+
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  
+  <script type="text/javascript">
+    emailjs.init('_8jBlctSspVmQys4o')
+  </script>
+
 </head>
 
 <body>
@@ -62,10 +69,49 @@
     </nav>
   </header>
 
+  <main>
+    <section class="container mt-5">
+      <h1 class="text-center">Contactanos</h1>
+
+      <form id="contactForm">
+
+        <div class="field mt-3">
+          <label for="from_name">Nombre</label>
+          <input type="text" class="form-control" id="from_name" name="from_name" required>
+        </div>
+
+        <div class="field mt-3">
+          <label for="email_id">Correo Electrónico</label>
+          <input type="email" class="form-control" id="email_id" name="email_id" required>
+        </div>
+
+        <div class="field mt-3">
+          <label for="number">Teléfono</label>
+          <input type="tel" class="form-control" id="number" name="number" pattern="[0-9]{10}" placeholder="Ej. 1234567890" required>
+          <small class="form-text text-muted">Ingrese su número de teléfono (10 dígitos)</small>
+        </div>
+
+        <div class="field mt-3">
+          <label for="message">Consulta tus dudas</label>
+          <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+        </div>
+
+        <div id="response" class="mt-3"></div>
+        <button type="submit" id="button" class="btn btn-primary mt-2">Enviar</button>
+        <button type="reset" class="btn btn-primary mt-2">Reiniciar Formulario</button>
+      </form>
+
+
+    </section>
+  </main>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
-  </script>
+    </script>
+
+  <script src="../index.js"></script>
   
+
 </body>
 
 </html>
