--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,7 @@
   <title>Document</title>
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  
+
   <script type="text/javascript">
     emailjs.init('_8jBlctSspVmQys4o')
   </script>
@@ -87,7 +87,8 @@
 
         <div class="field mt-3">
           <label for="number">Teléfono</label>
-          <input type="tel" class="form-control" id="number" name="number" pattern="[0-9]{10}" placeholder="Ej. 1234567890" required>
+          <input type="tel" class="form-control" id="number" name="number" pattern="[0-9]{10}"
+            placeholder="Ej. 1234567890" required>
           <small class="form-text text-muted">Ingrese su número de teléfono (10 dígitos)</small>
         </div>
 
@@ -110,7 +111,7 @@
     </script>
 
   <script src="../index.js"></script>
-  
+
 
 </body>
 
