--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="../css/estilo.css">
 
-  <title>Document</title>
+  <title>Contacto</title>
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
@@ -28,8 +28,8 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
 
-        <a href="#" class="navbar-brand">
-          <img src="../assets/logo.png" alt="Logo del loteo" class="logo">
+        <a href="../index.html" class="navbar-brand">
+          <img src="../assets/logo.png" alt="Logo del loteo" class="logo rounded">
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -70,37 +70,44 @@
   </header>
 
   <main>
-    <section class="container mt-5">
+
+    <section class="container section-contacto rounded">
       <h1 class="text-center">Contactanos</h1>
 
-      <form id="contactForm">
+      <div class="container d-flex justify-content-center align-items-center min-vh-100">
+        <form class="formulario rounded" id="contactForm">
 
-        <div class="field mt-3">
-          <label for="from_name">Nombre</label>
-          <input type="text" class="form-control" id="from_name" name="from_name" required>
-        </div>
+          <div class="field">
+            <label for="from_name">Nombre y Apellido</label>
+            <input type="text" class="form-control" id="from_name" name="from_name" required>
+          </div>
 
-        <div class="field mt-3">
-          <label for="email_id">Correo Electrónico</label>
-          <input type="email" class="form-control" id="email_id" name="email_id" required>
-        </div>
+          <div class="field mt-3">
+            <label for="email_id">Correo Electrónico</label>
+            <input type="email" class="form-control" id="email_id" name="email_id" required>
+            <small class="form-text text-light">Ej. terrasol@gmail.com</small>
+          </div>
 
-        <div class="field mt-3">
-          <label for="number">Teléfono</label>
-          <input type="tel" class="form-control" id="number" name="number" pattern="[0-9]{10}"
-            placeholder="Ej. 1234567890" required>
-          <small class="form-text text-muted">Ingrese su número de teléfono (10 dígitos)</small>
-        </div>
+          <div class="field mt-3">
+            <label for="number">Teléfono</label>
+            <input type="tel" class="form-control" id="number" name="number" pattern="[0-9]{10}" required>
+            <small class="form-text text-light">Ej. 3537123456</small>
+          </div>
 
-        <div class="field mt-3">
-          <label for="message">Consulta tus dudas</label>
-          <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
-        </div>
+          <div class="field mt-3">
+            <label for="message">Consulta tus dudas</label>
+            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+          </div>
 
-        <div id="response" class="mt-3"></div>
-        <button type="submit" id="button" class="btn btn-primary mt-2">Enviar</button>
-        <button type="reset" class="btn btn-primary mt-2">Reiniciar Formulario</button>
-      </form>
+          <div id="response" class="mt-3"></div>
+
+          <div class="container-btn">
+            <button type="submit" id="button" class="btn m-2">Enviar</button>
+            <button type="reset" class="btn m-2">Reiniciar Formulario</button>
+          </div>
+
+        </form>
+      </div>
 
 
     </section>
@@ -111,7 +118,6 @@
     </script>
 
   <script src="../index.js"></script>
-
 
 </body>
 
