--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -74,7 +74,7 @@
     <section class="container section-contacto rounded">
       <h1 class="text-center">Contactanos</h1>
 
-      <div class="container d-flex justify-content-center align-items-center min-vh-100">
+      <div class="container d-flex justify-content-center align-items-center">
         <form class="formulario rounded" id="contactForm">
 
           <div class="field">
