--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   <!-- Boostrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -73,6 +76,12 @@
     <div class="container">
       <div class="row">
 
+        <div class="col-md-6 mt-2">
+          <p class="copyright text-center">
+            Copyright 2023 © Terrasol - Todos los derechos reservados.
+          </p>
+        </div>
+
         <div class="col-md-6">
           <ul class="social-icons">
             <li>
@@ -88,19 +97,13 @@
           </ul>
         </div>
 
-        <div class="col-md-6 mt-2">
-          <p class="copyright text-center">
-            Copyright 2023 © Terrasol - Todos los derechos reservados.
-          </p>
-        </div>
-
       </div>
     </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
-  </script>
+    </script>
 
 </body>
 
