--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <!-- Boostrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -60,6 +63,35 @@
       </div>
     </nav>
   </header>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-6 mt-2">
+          <p class="copyright text-center">
+            Copyright 2023 © Terrasol - Todos los derechos reservados.
+          </p>
+        </div>
+
+        <div class="col-md-6">
+          <ul class="social-icons">
+            <li>
+              <a href="https://www.facebook.com" class="facebook">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com" class="instagram">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
