cambios pequeños e index iniciado

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -24,7 +24,7 @@
       <div class="container">
 
         <a href="#" class="navbar-brand">
-          <img src="../assets/logo.png" alt="Logo del loteo" class="logo">
+          <img src="../assets/logo.png" alt="Logo del loteo" class="logo rounded img-fluid"">
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -67,7 +67,7 @@
   <main>
     <h1 class="text-center">Servicios y Amenities</h1>
 
-    <section class="section-servicios">
+    <section class="section-servicios rounded">
       <h2 class="text-center">Servicios</h2>
 
       <div class="container mt-4">
@@ -151,7 +151,7 @@
 
     </section>
 
-    <section class="section-amenities">
+    <section class="section-amenities rounded">
       <h2 class="text-center">Amenities</h2>
 
       <div class="container mt-4">
