--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Animate -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -25,7 +28,7 @@
       <div class="container">
 
         <a href="#" class="navbar-brand">
-          <img src="./assets/logo.png" alt="Logo del loteo" class="logo">
+          <img src="./assets/logo.png" alt="Logo del loteo" class="logo rounded img-fluid">
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -66,9 +69,83 @@
   </header>
 
   <main>
+    <h1 class="text-center">Terrasol - Barrio Abierto</h1>
 
-    <section></section>
-    <section></section>
+    <section class="section-intro mt-3 p-2">
+      <p class="text-center">Su entrada Principal se encuentra sobre Calle Cordoba a la altura aproximada de 1900 ( Hoy
+        B° Eduardo Angeloz).
+        En el ingreso se proyecta la Construcción de una Galeria Comercial, de estilo Moderno, con Locales pensados para
+        satisfacer las diferentes necesidades de la zona.
+      </p>
+    </section>
+
+    <section class="section-novedades mt-3 rounded">
+      <h2>Novedades</h2>
+
+      <div id="carouselExample" class="carousel slide mt-5 p-4">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./assets/deportes.png" alt="" height="100">
+            <p class="text-center w-100">La primer etapa del loteo ya está en marcha</p>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/carretera.png" alt="" height="100">
+            <p class="d-block w-100">Ya se están realizando las obras para las calles</p>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/fuego.png" alt="" height="100">
+            <p class="d-block w-100">Se está colocando el gas</p>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+
+    <section class="section-info mt-5">
+      <div class="container mt-4">
+        <div class="row">
+
+          <div class="col-md-4">
+            <div class="card-info shadow">
+              <h3>Lotes</h3>
+              <p>Lotes desde 500 m2 a 800 m2</p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card-info shadow">
+              <h3>Proyecto</h3>
+              <p>Está dividido en 3 etapas de comercialización</p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card-info shadow">
+              <h3>Pago</h3>
+              <p>Pagando de contado, 10% de descuento</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section-ubicacion mt-5 rounded">
+      <h4 class="text-center">Ubicación</h4>
+
+      <div class="container-ubi-img">
+        <img src="./assets/primeraEtapa.jpg" alt="Plano primera etapa" class="img-fluid rounded">
+        <img src="./assets/loteoAereo.jpg" alt="Imagen Aerea" class="img-fluid rounded">
+        <img src="./assets/lotesMarcados.jpg" alt="Lotes Marcados ficticios" class="img-fluid rounded">
+      </div>
+    </section>
 
   </main>
 
@@ -104,6 +181,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
     </script>
+
+    <script src="./index.js"></script>
 
 </body>
 
