--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,7 +32,7 @@
       <div class="container">
 
         <a href="../index.html" class="navbar-brand">
-          <img src="../assets/logo.png" alt="Logo del loteo" class="logo rounded">
+          <img src="../assets/logo.png" alt="Logo del loteo" class="logo rounded img-fluid">
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -73,9 +73,9 @@
   </header>
 
   <main>
+    <h1 class="text-center">Contactanos</h1>
 
-    <section class="container section-contacto rounded">
-      <h1 class="text-center">Contactanos</h1>
+    <section class="container section-contacto rounded mt-4">
 
       <div class="container d-flex justify-content-center align-items-center">
         <form class="formulario rounded" id="contactForm">
