--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -24,7 +24,7 @@
       <div class="container">
 
         <a href="#" class="navbar-brand">
-          <img src="../assets/logo.png" alt="Logo del loteo" class="logo">
+          <img src="../assets/logo.png" alt="Logo del loteo" class="logo rounded img-fluid"">
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
