--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -4,21 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-   <!-- Boostrap -->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-   integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <!-- Boostrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
- <!-- CSS -->
- <link rel="stylesheet" href="../css/estilo.css">
+  <!-- CSS -->
+  <link rel="stylesheet" href="../css/estilo.css">
 
   <title>Document</title>
 </head>
 
 <body>
+
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
@@ -27,42 +28,70 @@
           <img src="../assets/logo.png" alt="Logo del loteo" class="logo rounded img-fluid"">
         </a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+          </button>
 
-        <div class="container-ul collapse navbar-collapse" id="navbarNav">
+          <div class="container-ul collapse navbar-collapse" id="navbarNav">
 
-          <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav ms-auto">
 
-            <li class="nav-item">
-              <a href="../index.html" class="nav-link">Inicio</a>
-            </li>
+              <li class="nav-item">
+                <a href="../index.html" class="nav-link">Inicio</a>
+              </li>
 
-            <li class="nav-item">
-              <a href="servicios.html" class="nav-link">Servicios</a>
-            </li>
+              <li class="nav-item">
+                <a href="servicios.html" class="nav-link">Servicios</a>
+              </li>
 
-            <li class="nav-item">
-              <a href="quienes.html" class="nav-link">Quienes Somos</a>
-            </li>
+              <li class="nav-item">
+                <a href="quienes.html" class="nav-link">Quienes Somos</a>
+              </li>
 
-            <li class="nav-item">
-              <a href="galeria.html" class="nav-link">Galería</a>
-            </li>
+              <li class="nav-item">
+                <a href="galeria.html" class="nav-link">Galería</a>
+              </li>
 
-            <li class="nav-item">
-              <a href="contacto.html" class="nav-link">Contacto</a>
-            </li>
+              <li class="nav-item">
+                <a href="contacto.html" class="nav-link">Contacto</a>
+              </li>
 
-          </ul>
+            </ul>
 
-        </div>
+          </div>
 
       </div>
     </nav>
   </header>
+
+  <main>
+    <h1 class="text-center">Sobre Nosotros</h1>
+
+    <section class="container mt-5 p-3 rounded text-center section-sobreNos">
+          <h2 class="text-center">Nuestro Equipo</h2>
+          <p class="text-center">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, repellendus?
+          </p>
+    </section>
+    
+    <section class="container mt-5 p-3 rounded text-center section-sobreNos">
+          <h2 class="text-center">Experiencia y Trayectoria</h2>
+          <p class="text-center">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, repellendus?
+          </p>
+    </section>
+    
+    <section class="container mt-5 p-3 rounded text-center section-sobreNos">
+            <h2 class="text-center">Nuestra Misión</h2>
+            <p class="text-center">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti saepe earum nihil blanditiis
+              accusantium, quia deleniti, aspernatur, eius soluta amet quisquam laboriosam ex veniam. Tempore unde
+              facere ab tenetur
+    </section>
+
+
+  </main>
 
   <footer class="footer">
     <div class="container">
@@ -92,9 +121,11 @@
       </div>
     </div>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
-</script>
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
