galeria ejemplo terminada

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -64,6 +64,41 @@
     </nav>
   </header>
 
+  <main>
+    <h1 class="text-center">Galería de Imágenes</h1>
+
+    <section class="section-carrusel-ingreso mt-5">
+      <h2 class="text-center">Imágenes futuristas sobre proyectos planeados de Terrasol.</h2>
+      <p class="text-center"> <b>Galería Comercial, Estadio de Voley y Complejo de Departamentos</b>. Se encontrarían en el ingreso por calle Córdoba</p>
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../assets/IMG-20230829-WA0017.jpg" class="d-block w-100 rounded" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/IMG-20230829-WA0002.jpg" class="d-block w-100 rounded" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/IMG-20230829-WA0005.jpg" class="d-block w-100 rounded" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/IMG-20230829-WA0014.jpg" class="d-block w-100 rounded" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+    </section>
+
+  </main>
+
   <footer class="footer">
     <div class="container">
       <div class="row">
