galeria y quines somos listo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
   <!-- INICIO HEADER -->
-  <header class="header"> 
+  <header class="header">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
 
@@ -85,8 +85,9 @@
       <h3 class="text-center">El proyecto de urbanización más grande de Bell Ville</h3>
       <p class="text-center">Su entrada Principal se encuentra sobre Calle Cordoba a la altura aproximada de 1900 ( Hoy
         B° Eduardo Angeloz).
-        En el ingreso <b>se proyecta la Construcción de una Galeria Comercial, de estilo Moderno, con Locales pensados para
-        satisfacer las diferentes necesidades de la zona.</b>
+        En el ingreso <b>se proyecta la Construcción de una Galeria Comercial, de estilo Moderno, con Locales pensados
+          para
+          satisfacer las diferentes necesidades de la zona.</b>
       </p>
     </section>
 
@@ -121,7 +122,7 @@
     </section>
 
     <!-- INICIO SECTION UBICACION -->
-  <!--   <section class="section-ubicacion mt-5 rounded">
+    <!--   <section class="section-ubicacion mt-5 rounded">
       <h3 class="text-center">Ubicación</h3>
 
       <div class="row m-5 container-ubi-img">
@@ -144,8 +145,8 @@
         </div>
       </div> -->
 
-      <!-- Modal 1 -->
-      <!-- <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
+    <!-- Modal 1 -->
+    <!-- <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
             <img src="./assets/primeraEtapa.jpg" alt="Plano primera etapa">
@@ -153,8 +154,8 @@
         </div>
       </div> -->
 
-      <!-- Modal 2 -->
-     <!--  <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage2">
+    <!-- Modal 2 -->
+    <!--  <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage2">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
             <img src="./assets/loteoAereo.jpg" alt="toma aerea del loteo">
@@ -162,7 +163,7 @@
         </div>
       </div> -->
 
-      <!-- Modal 3 -->
+    <!-- Modal 3 -->
     <!--   <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage3">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
@@ -312,14 +313,14 @@
         </div>
       </div>
     </section>
-
     <!-- FIN SERVICIOS -->
+
     <!-- INICIO GALERIA -->
-    <section class="section-carrusel-ingreso mt-5" id="galeria">
+    <section class="section-carrusel mt-5" id="galeria">
       <h2 class="text-center">Imágenes futuristas sobre proyectos planeados de Terrasol.</h2>
       <p class="text-center"> <b>Galería Comercial, Estadio de Voley y Complejo de Departamentos</b>. Se encontrarían en
         el ingreso por calle Córdoba</p>
-      <div id="carouselExample" class="carousel slide">
+      <div id="carouselExample" class="carousel slide carrusel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="../assets/IMG-20230829-WA0017.jpg" class="d-block w-100 rounded" alt="Imagen ilustrativa">
@@ -347,70 +348,78 @@
     <!-- FIN GALERIA -->
 
     <!-- INICIO QUIENES SOMOS -->
-    <h2 class="text-center" id="quienes-somos">Sobre Nosotros</h>
-      <section class="container mt-5 p-3 rounded text-center section-sobreNos">
-        <h3 class="text-center">Nuestro Equipo</h3>
-        <p class="text-center">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, repellendus?
-        </p>
-      </section>
+    <section class="container mt-5 p-3 rounded text-center section-sobre-nosotros">
 
-      <section class="container mt-5 p-3 rounded text-center section-sobreNos">
-        <h3 class="text-center">Experiencia y Trayectoria</h3>
-        <p class="text-center">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, repellendus?
-        </p>
-      </section>
+      <h2>Sobre Nosotros</h2>
+      <div class="container mt-4">
+        <div class="row">
 
-      <section class="container mt-5 p-3 rounded text-center section-sobreNos">
-        <h3 class="text-center">Nuestra Misión</h3>
-        <p class="text-center">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti saepe earum nihil blanditiis
-          accusantium, quia deleniti, aspernatur, eius soluta amet quisquam laboriosam ex veniam. Tempore unde
-          facere ab tenetur
-      </section>
-      <!-- FIN QUIENES SOMOS -->
-
-      <!-- INICIO CONTACTO -->
-      <section class="container section-contacto rounded mt-4">
-        <h2 id="contacto">Contacto</h2>
-        <div class="container d-flex justify-content-center align-items-center">
-          <form class="formulario rounded" id="contactForm">
-
-            <div class="field">
-              <label for="from_name">Nombre y Apellido</label>
-              <input type="text" class="form-control" id="from_name" name="from_name" required>
+          <div class="col-lg-4 mb-4 text-center">
+            <div class="card-sobreNos shadow rounded">
+              <h3>Nuestro Equipo</h3>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque fuga, in dolorum explicabo necessitatibus esse?</p>
             </div>
+          </div>
 
-            <div class="field mt-3">
-              <label for="email_id">Correo Electrónico</label>
-              <input type="email" class="form-control" id="email_id" name="email_id" required>
-              <small class="form-text text-light">Ej. terrasol@gmail.com</small>
+          <div class="col-lg-4 mb-4 text-center">
+            <div class="card-sobreNos shadow rounded">
+              <h3>Experiencia y Trayectoria</h3>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque fuga, in dolorum explicabo necessitatibus esse?</p>
             </div>
+          </div>
 
-            <div class="field mt-3">
-              <label for="number">Teléfono</label>
-              <input type="tel" class="form-control" id="number" name="number" pattern="[0-9]{10}" required>
-              <small class="form-text text-light">Ej. 3537123456</small>
+          <div class="col-lg-4 mb-4 text-center">
+            <div class="card-sobreNos shadow rounded">
+              <h3>Nuestra Mision</h3>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque fuga, in dolorum explicabo necessitatibus esse?</p>
             </div>
+          </div>
 
-            <div class="field mt-3">
-              <label for="message">Consulta tus dudas</label>
-              <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
-            </div>
-
-            <div id="response" class="mt-3"></div>
-
-            <div class="container-btn">
-              <button type="submit" id="button" class="btn m-2">Enviar</button>
-              <button type="reset" class="btn m-2">Reiniciar Formulario</button>
-            </div>
-
-          </form>
         </div>
+      </div>
+    </section>
+    <!-- FIN QUIENES SOMOS -->
 
-      </section>
-      <!-- FIN CONTACTO -->
+    <!-- INICIO CONTACTO -->
+    <section class="container section-contacto rounded mt-4">
+      <h2 id="contacto">Contacto</h2>
+      <div class="container d-flex justify-content-center align-items-center">
+        <form class="formulario rounded" id="contactForm">
+
+          <div class="field">
+            <label for="from_name">Nombre y Apellido</label>
+            <input type="text" class="form-control" id="from_name" name="from_name" required>
+          </div>
+
+          <div class="field mt-3">
+            <label for="email_id">Correo Electrónico</label>
+            <input type="email" class="form-control" id="email_id" name="email_id" required>
+            <small class="form-text text-light">Ej. terrasol@gmail.com</small>
+          </div>
+
+          <div class="field mt-3">
+            <label for="number">Teléfono</label>
+            <input type="tel" class="form-control" id="number" name="number" pattern="[0-9]{10}" required>
+            <small class="form-text text-light">Ej. 3537123456</small>
+          </div>
+
+          <div class="field mt-3">
+            <label for="message">Consulta tus dudas</label>
+            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+          </div>
+
+          <div id="response" class="mt-3"></div>
+
+          <div class="container-btn">
+            <button type="submit" id="button" class="btn m-2">Enviar</button>
+            <button type="reset" class="btn m-2">Reiniciar Formulario</button>
+          </div>
+
+        </form>
+      </div>
+
+    </section>
+    <!-- FIN CONTACTO -->
   </main>
   <!-- FIN MAIN -->
 
