--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     <!-- FIN GALERIA -->
 
     <!-- INICIO QUIENES SOMOS -->
-    <section class="container mt-5 p-3 rounded text-center section-sobre-nosotros">
+    <section class="container mt-5 p-3 rounded text-center section-sobre-nosotros" id="quienes-somos">
 
       <h2>Sobre Nosotros</h2>
       <div class="container mt-4">
