boton de wsp, responsive

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <!-- Remix Icon -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -128,7 +128,7 @@
       <div class="container mt-4">
         <div class="row">
 
-          <div class="col-md-3 mb-4">
+          <div class="col-6 col-md-4 col-lg-3 mb-4">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Gas Natural</h4>
@@ -137,7 +137,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 mb-4">
+          <div class="col-6 col-md-4 col-lg-3 mb-4">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Red de Cloacas</h4>
@@ -146,7 +146,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 mb-4">
+          <div class="col-6 col-md-4 col-lg-3 mb-4">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Cordón Cuneta</h4>
@@ -155,7 +155,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 mb-4">
+          <div class="col-6 col-md-4 col-lg-3 mb-4">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Alumbrado Público Led Subterráneo</h4>
@@ -164,7 +164,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 mb-4">
+          <div class="col-6 col-md-4 col-lg-3 mb-4">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Calles Pavimentadas</h4>
@@ -173,7 +173,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 mb-4">
+          <div class="col-6 col-md-4 col-lg-3 mb-4">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Red de Agua Potable</h4>
@@ -183,7 +183,7 @@
           </div>
 
 
-          <div class="col-md-3 mb-4">
+          <div class="col-6 col-md-4 col-lg-3 mb-4">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Red Eléctrica Subterránea</h4>
@@ -192,7 +192,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 mb-4">
+          <div class="col-6 col-md-4 col-lg-3 mb-4">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Boulevard de Ingreso</h4>
@@ -212,7 +212,7 @@
       <div class="container mt-4">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
-          <div class="col">
+          <div class="col col-sm-6">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Centro Comercial</h4>
@@ -221,7 +221,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col col-sm-6">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Espacios Verdes Naturales</h4>
@@ -230,7 +230,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col col-sm-6">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Juegos Recreativos</h4>
@@ -239,7 +239,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col col-sm-6">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Sector Deportivo</h4>
@@ -248,7 +248,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col col-sm-6">
             <div class="card shadow">
               <div class="card-body text-center">
                 <h4 class="card-title">Circuito Aeróbico</h4>
@@ -370,7 +370,8 @@
         </div>
 
         <div class="col-md-4 form-floating mb-4">
-          <input type="number" class="form-control" id="validationCustom02" placeholder="Teléfono/Celular" min="0" required>
+          <input type="number" class="form-control" id="validationCustom02" placeholder="Teléfono/Celular" min="0"
+            required>
           <label for="validationCustom02" class="form-label">Teléfono/Celular</label>
           <div class="valid-tooltip mjs-bueno">Tu número de celular se ve bien!</div>
           <div class="invalid-tooltip msj-malo">Por favor, ingresa un número de celular válido</div>
@@ -396,6 +397,11 @@
     <button id="boton-inicio" class="boton-inicio">
       <i class="ri-arrow-up-line"></i>
     </button>
+
+
+    <a href="https://wa.me/3537607251" target="_blank" class="boton-wsp">
+      <img src="./assets/whatsapp.png" alt="WhatsApp Logo">
+    </a>
 
 
   </main>
